feat: 配置Multi-Release JAR支持，更新Java 17代码兼容Java 21+正式版Foreign Memory API